bug fix - aligns buttons horizontally in 'change pw' modal

--- a/src/style/base.scss
+++ b/src/style/base.scss
@@ -408,8 +408,7 @@ h5.modal-title {
 }
 
 div.modal-content > div.modal-header,
-div.modal-content > div.modal-body,
-div.modal-content > div.modal-footer {
+div.modal-content > div.modal-body {
   background-color: #bbded9;
   background-image: url(../../img/texture.png);
   display: flex;
